Fix auth && User profile endpoints
