# internal/api/repository/postgres/auth.go
@@ -13,17 +13,16 @@ func NewAuthRepository(db *sql.DB) *AuthRepository {
 	return &AuthRepository{db: db}
 }
 
-func (r *AuthRepository) CreateUser(data *model.Login) (*model.LoginResponse, error) {
-	user_id := &model.LoginResponse{}
+func (r *AuthRepository) CreateUser(data *model.Login) (int, error) {
+	// user_id := &model.LoginResponse{}
+	var userId int
 	row := r.db.QueryRow(
-		"INSERT INTO \"user\" (phone, first_name, last_name, code) values ($1, $2, $3, $4) RETURNING id",
+		"INSERT INTO \"user\" (phone, code) values ($1, $2) RETURNING id",
 		data.Phone,
-		data.FirstName,
-		data.LastName,
 		data.Code,
 	)
-	if err := row.Scan(&user_id.ID); err != nil {
-		return nil, err
+	if err := row.Scan(&userId); err != nil {
+		return userId, err
 	}
-	return user_id, nil
+	return userId, nil
 }
